Optimize performance: remove Guava, inline checks, optimize benchmarks
- Remove Guava dependency, use inline null checks
- Optimize FilterPipe, FunctionalPipe, FoldingPipe, Sink classes
- Add large collection benchmarks
- Add GC profiling support to benchmarks
- Fix test for FoldingPipe without sink